unpackaged/main/default/objects/Billing_CS__c/Billing_CS__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Billing CS</label>
</CustomObject>