unpackaged/main/default/objects/Billing_CS__c/fields/Connector_Full_25_25_50_Rev_Rec_ID__c.field-meta.xml
<CustomField>
    <fullName>Connector_Full_25_25_50_Rev_Rec_ID__c</fullName>
    <label>Connector Full 25/25/50 Rev Rec ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>