unpackaged/main/default/objects/Billing_CS__c/fields/Full_Recognition_RevRec_ID__c.field-meta.xml
<CustomField>
    <fullName>Full_Recognition_RevRec_ID__c</fullName>
    <label>Full Recognition RevRec ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>