unpackaged/main/default/objects/Billing_CS__c/fields/Legal_Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_ID__c</fullName>
    <label>Legal Entity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>