unpackaged/main/default/objects/Billing_CS__c/fields/Ratable_Revenue_Recognition_ID__c.field-meta.xml
<CustomField>
    <fullName>Ratable_Revenue_Recognition_ID__c</fullName>
    <label>Ratable Revenue Recognition ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>